# PyScraper-md

./: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  optimization_report.md  pyproject.toml  scraper-go.sh
benchmarks/: repro_benchmark.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/cli_tool_click_20251221/: metadata.json  plan.md  spec.md
conductor/archive/dynamic_scraping_playwright_20251221/: metadata.json  plan.md  spec.md
conductor/tracks/cli_tool_click_20251221/: plan.md
conductor/tracks/core_scraper_lib_20251221/: metadata.json  plan.md  spec.md
conductor/tracks/dynamic_scraping_playwright_20251221/: plan.md
conductor/tracks/web_ui_flask_20251221/: metadata.json  plan.md  spec.md
src/md_scraper/: cli.py  crawler.py  sanitizer.py  scraper.py  utils.py
src/md_scraper/web/: app.py
src/md_scraper/web/templates/: index.html
tests/: benchmark_svg_opt.py  repro_leak.py  syntax_check.py  test_cli.py  test_crawler_logic.py  test_dynamic_scraper.py  test_import.py  test_local_files.py  test_scraper.py  test_web_app.py  test_web_batch.py  test_web_crawl.py
tests/samples/: blog_post.html
