[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "ray0404",email = "ray.valentin.04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "md_scraper", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
