[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "ray0404",email = "ray.valentin.04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[project.optional-dependencies]
dynamic = [
    "playwright (>=1.49.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "md_scraper", from = "src" }
]

[tool.poetry.scripts]
scraper = "md_scraper.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
